--- a/bright-space-client/package.json
+++ b/bright-space-client/package.json
@@ -17,6 +17,7 @@
     "framer-motion": "^11.5.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.2"
   },
   "devDependencies": {
