added classes page, class card, classes json file  and added some changes in navbar, banner, footer, Main, routes, main files

--- a/bright-space-client/package.json
+++ b/bright-space-client/package.json
@@ -14,6 +14,7 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@smastrom/react-rating": "^1.5.0",
     "framer-motion": "^11.5.4",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
