--- a/bright-space-client/package.json
+++ b/bright-space-client/package.json
@@ -16,6 +16,7 @@
     "@emotion/styled": "^11.13.0",
     "@smastrom/react-rating": "^1.5.0",
     "framer-motion": "^11.5.4",
+    "lottie-react": "^2.4.0",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
