--- a/bright-space-client/package.json
+++ b/bright-space-client/package.json
@@ -14,6 +14,7 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@jitsi/react-sdk": "^1.4.0",
     "@smastrom/react-rating": "^1.5.0",
     "framer-motion": "^11.5.4",
     "lottie-react": "^2.4.0",
