--- a/bright-space-client/package.json
+++ b/bright-space-client/package.json
@@ -15,6 +15,8 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@smastrom/react-rating": "^1.5.0",
+    "@tanstack/react-query": "^5.56.2",
+    "axios": "^1.7.7",
     "framer-motion": "^11.5.4",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
