--- a/bright-space-client/package.json
+++ b/bright-space-client/package.json
@@ -15,6 +15,7 @@
     "@dotlottie/player-component": "^2.7.12",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@rollup/rollup-darwin-arm64": "^4.22.4",
     "@smastrom/react-rating": "^1.5.0",
     "firebase": "^10.13.2",
     "framer-motion": "^11.5.4",
