--- a/bright-space-client/package.json
+++ b/bright-space-client/package.json
@@ -15,6 +15,9 @@
     "@dotlottie/player-component": "^2.7.12",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@fortawesome/fontawesome-free": "^6.6.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@smastrom/react-rating": "^1.5.0",
     "firebase": "^10.13.2",
     "framer-motion": "^11.5.4",
