--- a/bright-space-client/package.json
+++ b/bright-space-client/package.json
@@ -23,6 +23,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-lottie": "^1.2.4",
     "react-router-dom": "^6.26.2",
     "swiper": "^11.1.14"
   },
