--- a/bright-space-client/package.json
+++ b/bright-space-client/package.json
@@ -17,6 +17,8 @@
     "@emotion/styled": "^11.13.0",
     "@jitsi/react-sdk": "^1.4.0",
     "@smastrom/react-rating": "^1.5.0",
+    "@tanstack/react-query": "^5.56.2",
+    "axios": "^1.7.7",
     "firebase": "^10.13.2",
     "framer-motion": "^11.5.4",
     "lottie-react": "^2.4.0",
