--- a/bright-space-client/package.json
+++ b/bright-space-client/package.json
@@ -16,11 +16,12 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@fortawesome/fontawesome-free": "^6.6.0",
+    "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
-    "@rollup/rollup-darwin-arm64": "^4.22.4",
     "@smastrom/react-rating": "^1.5.0",
     "firebase": "^10.13.2",
+    "font-awesome": "^4.7.0",
     "framer-motion": "^11.5.4",
     "lottie-react": "^2.4.0",
     "prop-types": "^15.8.1",
