--- a/bright-space-client/package.json
+++ b/bright-space-client/package.json
@@ -20,7 +20,6 @@
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@jitsi/react-sdk": "^1.4.0",
-    "@rollup/rollup-darwin-arm64": "^4.22.4",
     "@smastrom/react-rating": "^1.5.0",
     "@tanstack/react-query": "^5.56.2",
     "axios": "^1.7.7",
@@ -34,6 +33,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.2",
+    "rollup": "^4.22.4",
     "swiper": "^11.1.14"
   },
   "devDependencies": {
