--- a/bright-space-client/package.json
+++ b/bright-space-client/package.json
@@ -33,6 +33,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.2",
+    "sweetalert2": "^11.14.1",
     "swiper": "^11.1.14"
   },
   "devDependencies": {
