--- a/bright-space-client/package.json
+++ b/bright-space-client/package.json
@@ -32,6 +32,7 @@
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
+    "react-markdown": "^9.0.1",
     "react-router-dom": "^6.26.2",
     "rollup": "^4.22.4",
     "swiper": "^11.1.14"
