--- a/bright-space-client/package.json
+++ b/bright-space-client/package.json
@@ -35,6 +35,7 @@
     "react-router-dom": "^6.26.2",
     "sweetalert2": "^11.6.13",
     "swiper": "^11.1.14"
+    
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
@@ -48,8 +49,6 @@
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
     "postcss": "^8.4.47",
-    "rollup": "^4.22.5",
-    "tailwindcss": "^3.4.13",
-    "vite": "^5.4.1"
+    "rollup": "^4.22.5"
   }
 }
