--- a/bright-space-server/.vercel/project.json
+++ b/bright-space-server/.vercel/project.json
@@ -1,1 +1,1 @@
-{"orgId":"team_LD5s0cvzcB1kq8SjLDaxL7mu","projectId":"prj_htU79Co4MszDNACo2LIQ9N3pLzpr"}
+{"projectId":"prj_BTPEoFNIAEB8EEIC1NZCYHmYSFvd","orgId":"team_LD5s0cvzcB1kq8SjLDaxL7mu"}
