--- a/bright-space-client/package.json
+++ b/bright-space-client/package.json
@@ -35,6 +35,7 @@
     "react-markdown": "^8.0.6",
     "react-player": "^2.16.0",
     "react-router-dom": "^6.26.2",
+    "recharts": "^2.13.0",
     "sweetalert2": "^11.6.13",
     "swiper": "^11.1.14"
   },
