--- a/bright-space-server/package.json
+++ b/bright-space-server/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "jsonwebtoken": "^9.0.2",
-    "mongodb": "^6.9.0"
+    "mongodb": "^6.9.0",
+    "socket.io": "^4.8.0"
   }
 }
