--- a/bright-space-client/package.json
+++ b/bright-space-client/package.json
@@ -34,6 +34,7 @@
     "react-icons": "^5.3.0",
     "react-markdown": "^8.0.6",
     "react-router-dom": "^6.26.2",
+    "socket.io-client": "^4.8.0",
     "sweetalert2": "^11.6.13",
     "swiper": "^11.1.14"
   },
